<resources>
    <string name="app_name">Berkicau</string>
    <string name="btnPutar">Putar</string>
    <string name="btnJeda">Jeda</string>
    <string name="btnBerhenti">Berhenti</string>
    <string name="action_settings">Settings</string>
    <string name="muraibatu">Murai Batu</string>
    <string name="kenari">Kenari</string>
    <string name="lovebird">Love Bird</string>
    <string name="pleci">Pleci</string>
    <string name="title_activity_halaman_murai">Murai</string>
    <string name="pengertiankicau">
        Ada beberapa faktor yang bisa menyebabkan burung peliharaan kita pandai berkicau sebagai contohnya burung kenari dan burung cendet burung tersebut memang bisa mengeluarkan suara yang merdu dan indah bahkan jenis burung cendet bisa mengeluarkan ragam kicauan burung seperti suara jangkrik, suara burung prenjak, suara kucing dan terlepas dari itu bila kita memiliki burung peliharaan di rumah maka kita harus selalu merawat dan memberikan makanan tambahan agar burung menjadi cerdas
    </string>

    <string name="pengertianmurai">
        Kucica hutan (Copsychus malabaricus), juga dikenal sebagai Murai batu merupakan burung pengicau yang keadaanya terancam akibat perburuan. Termasuk ke dalam famili Muscicapidae atau burung cacing. Tersebar di seluruh pulau Sumatra, Semenanjung Malaysia, dan sebagian pulau Jawa. Beberapa pakar menganggap ras dari Kalimantan Utara Kucica Alis-putih (Copsychus malabaricus stricklandii) sebagai spesies tersendiri.

        Di habitat aslinya Kucica Hutan atau sering di sebut Burung murai batu cenderung memilih hutan alam yang rapat atau hutan sekunder. Murai batu merupakan kelompok burung yang dikenal sebagai teritorial dan sangat kuat dalam mempertahankan wilayahnya (Thruses). Burung murai batu memiliki suara kicauan yang bagus sehingga mendapat penghargaan terbaik atas nyanyian nya yang sangat indah pada tahun 1947 (The Best Song Birds – Delacour, 1947). Burung murai batu merupakan kelompok burung yang di gemari di kalangan para pecinta kicauan karena memiliki suara atau spesifikasi kicauan yang sangat baik.

        Untuk daerah Sumatra khususnya, banyak sekali di temukan burung jenis murai batu, seperti burung murai batu aceh, burung murai batu medan , burung murai nias dan murai batu lampung.

        Penyebaran burung Murai Batu di Pulau Jawa saat ini sangat terbatas dan hanya di temukan di beberapa tempat yang berhutan, seperti di tempat-tempat konservasi atau tempat wisata alam contohnya seperti Taman Nasional Ujung Kulon dan Taman Nasional Meru Betiri dan Hutan Wisata Pananjung Pangandaran.
    </string>

    <string name="pengertiankenari">
        Burung kenari (Serinus Canaria) pertama ditemukan Oleh Pelaut Perancis Jean de Berthan Cout di Kepulauan Canary pada abad ke-15. Terkesan karena keindahan bulu dan kemerduan suaranya. Keaneka ragaman burung kenari yang sekarang merupakan perkembangan keturunan kenari liar yang bernama latin Serinus Canarius. Banyaknya jenis ini merupakan kondisi alam atau juga karena kawin silang yang terjadi sejak lima abad yang lalu.

        Negara Belanda yang kini lebih dikenal sebagai negara pengekspor kenari Indonesia, semula mendatangkan kenari dari Inggris, Jerman dan Belgia kemudian kenari tersebut dikawinkan dengan kenari liar dan menghasilkan beberapa jenis seperti norwich,scoth fancy,bolder fancy,london fancy,yorkshire,lanchaisire,gloser,dan sebagainya.

        Nama burung kenari tidak berhubungan dengan buah kenari, melainkan diambil dari nama pulau habitat aslinya, yaitu Kepulauan Canary. Kepulauan itu sendiri mendapat namanya dari bahasa Latin canarias yang berarti (pulau) anjiing, karena banyaknya anjing liar yang ada di sana pada zaman dahulu.
    </string>

    <string name="pengertianlovebird">
        Burung cinta adalah satu burung dari sembilan jenis spesies genus Agapornis (dari bahasa Yunani "agape" yang berarti "cinta" dan "ornis" yang bearti "burung"). Mereka adalah burung yang berukuran kecil, antara 13 sampai 17 cm dengan berat 40 hingga 60 gram, dan bersifat sosial. Delapan dari spesies ini berasal dari Afrika, sementara spesies "burung cinta kepala abu-abu" berasal dari Madagaskar. Nama mereka berasal dari kelakuan yang umum diamati bahwa sepasang burung cinta akan duduk berdekatan dan saling menyayangi satu sama lain. Sifat pasangan burung cinta adalah monogami di alam bebas.
    </string>

    <string name="pengertianpleci">

        Burung Pleci adalah sama dengan kata lain burung cici kacamata, banyak dikalangan pehobi kicau mania burung ini disebut dengan burung cici kacamata.

Di alamnya burung ini hidup bergerombol dengan sekawanannya, dan Burung mungil ini ( burung Pleci ) termasuk burung yang monomorpic, artinya burung berkelamin jantan dan betina memiliki tampilan fisik yang sama tapi masih memiliki sedikit perbedaan.

        Mengingat burung Pleci adalah jenis burung koloni yang sangat suka berkumpul dengan burung sejenisnya, Anda juga bisa memancing agar burung ini bisa terus gacor dengan menempatkan burung yang sudah lebih dulu ngerol.

        Cara ini terbukti efektif untuk memancing agar burung yang sedang Anda latih mau segera bersuara.
    </string>

</resources>
