<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mydhitz.berkicau.MainActivity"
    tools:showIn="@layout/activity_main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#0070cb">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:background="#86c9ff">

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:id="@+id/murai"
                android:onClick="btnmurai"
                android:text="@string/muraibatu" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:id="@+id/kenari"
                android:onClick="btnkenari"
                android:text="@string/kenari"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:id="@+id/lovebird"
                android:onClick="btnlovebird"
                android:text="@string/lovebird" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:id="@+id/pleci"
                android:onClick="btnpleci"
                android:text="@string/pleci"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="20sp"
                android:text="@string/pengertiankicau"/>

        </LinearLayout>
    </ScrollView>
</android.support.v4.widget.NestedScrollView>
